--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,20 @@
 cmake_minimum_required(VERSION 3.5)
 
+MACRO(MACRO_ENSURE_OUT_OF_SOURCE_BUILD MSG)
+     STRING(COMPARE EQUAL "${CMAKE_SOURCE_DIR}"
+     "${CMAKE_BINARY_DIR}" insource)
+     GET_FILENAME_COMPONENT(PARENTDIR ${CMAKE_SOURCE_DIR} PATH)
+     STRING(COMPARE EQUAL "${CMAKE_SOURCE_DIR}"
+     "${PARENTDIR}" insourcesubdir)
+    IF(insource OR insourcesubdir)
+        MESSAGE(FATAL_ERROR "${MSG}")
+    ENDIF(insource OR insourcesubdir)
+ENDMACRO(MACRO_ENSURE_OUT_OF_SOURCE_BUILD)
+
+MACRO_ENSURE_OUT_OF_SOURCE_BUILD(
+    "${CMAKE_PROJECT_NAME} requires an out of source build."
+)
+
 # set the project name and version
 project(Platformer VERSION 1.0)
 
@@ -11,7 +26,7 @@ set(CATCH_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/catch)
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 #set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 find_package(Catch2 REQUIRED)
 
